[tool.poetry]
name = "mccistats"
version = "0.1.0"
description = ""
authors = ["Sammi de Guzman <sammi@sammdot.ca>"]
readme = "README.md"
packages = [
  {include = "mccistats"},
  {include = "tubnetstats"}
]

[tool.poetry.dependencies]
python = "^3.9"
mcstatus = "^9.4.2"
schedule = "^1.1.0"
prometheus-client = "^0.14.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
